--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,27 +1,15 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <style>
-      body {
-        background: linear-gradient(
-          135deg,
-          white 0%,
-          white 49%,
-          black 49%,
-          black 51%,
-          white 51%,
-          white 100%
-        );
-        background-repeat: repeat;
-        background-size: 20px 20px;
-      }
-      canvas {
-        background-color: white;
-      }
-    </style>
-  </head>
-  <script type="module">
-    import init from "./rubiks_cube.js";
-    init();
-  </script>
+    <head>
+        <meta charset="UTF-8" />
+        <style>
+            body {
+            canvas {
+              background-color: #2b2c2f;
+            }
+        </style>
+    </head>
+    <script type="module">
+        import init from "./rubiks_cube.js";
+        init();
+    </script>
 </html>
