left mouse and key text for web

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,15 +1,26 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <style>
-            body {
-            canvas {
-              background-color: #2b2c2f;
-            }
-        </style>
     </head>
     <script type="module">
         import init from "./rubiks_cube.js";
         init();
     </script>
+
+    <style>
+        body {
+            background-color: #2b2c2f;
+        }
+        p {
+            color: #efdcdc;
+        }
+    </style>
+    <body>
+        <p>Controls:</p>
+        <p>UIO</p>
+        <p>JKL</p>
+        <p>WR</p>
+        <p>SF</p>
+        <p>XV</p>
+    </body>
 </html>
